# Flowde

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
flowde/: README.md  __init__.py  __main__.py  cli.py  func.py  pyproject.toml
